plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

group 'iuh.fit'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

javafx {
    version = "23"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

run {
    doFirst {
        jvmArgs = [
                '--module-path', System.getenv('PATH_TO_FX') ?: 'D:/Java/JavaFX/javafx-sdk-23/lib',
                '--add-modules', 'javafx.controls,javafx.fxml'
        ]
    }
}
startScripts {
    enabled = false
}

// Xử lý trùng lặp file
tasks.withType(AbstractArchiveTask) {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}
java {
    sourceCompatibility = '23'
    targetCompatibility = '23'
}

application {
    mainClass = 'iuh.fit.App'
}

ext {
    junitVersion = '5.10.2'
}

sourceCompatibility = '23'
targetCompatibility = '23'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

dependencies {
    implementation('org.hibernate:hibernate-core:6.4.5.Final')
    implementation('org.glassfish.jaxb:jaxb-runtime:4.0.5')

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
    implementation('org.hibernate:hibernate-core:6.0.2.Final')
    implementation('org.glassfish.jaxb:jaxb-runtime:3.0.2')

    implementation (files("libs/LTPTJava_GiaVanVa_HK2.jar"))

    // https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
    implementation 'org.mariadb.jdbc:mariadb-java-client:3.5.1'

    // https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc
    implementation 'com.microsoft.sqlserver:mssql-jdbc:11.2.3.jre17'

    // https://mvnrepository.com/artifact/net.datafaker/datafaker
    implementation 'net.datafaker:datafaker:2.4.2'

    // https://mvnrepository.com/artifact/org.projectlombok/lombok
    compileOnly 'org.projectlombok:lombok:1.18.36'
    annotationProcessor('org.projectlombok:lombok:1.18.36')

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")

    implementation 'org.openjfx:javafx-controls:23'
    implementation 'org.openjfx:javafx-fxml:23'

}

test {
    useJUnitPlatform()
}
task App(type: JavaExec) {
    group = "application"
    description = "Run App"
    mainClass = "iuh.fit.App"
    classpath = sourceSets.main.runtimeClasspath
    jvmArgs = [
            "--module-path", configurations.runtimeClasspath.asPath,
            "--add-modules", "javafx.controls,javafx.fxml",
            "-Djava.security.policy=${projectDir}/rmi.policy",
            "-Djava.rmi.server.hostname=LAPTOP-O8OOBHDK"
    ]
}